# YukiZygisk

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md  build.sh
kernel/: README.md
kernel/core/: bootstrap.c  control.c  lifecycle.h  module.c
kernel/feature/: zygote_ctl.c  zygote_nl.c  zygote_nl.h  zygote_orch.c  zygote_probe.c
kernel/host/: adapter.c  host.h  lsm.c  mount.c  policy.c  policy.h  root_impl.c  root_impl.h  runtime.c  runtime.h
kernel/uapi/: yukizygisk.h
module/: boot-completed.sh  customize.sh  module.prop  post-fs-data.sh
uapi/: yukizygisk.h
userspace/common/: json.hpp
userspace/zygisk/core/: CMakeLists.txt
userspace/zygisk/core/src/: art_method.hpp  core.cpp  hook.cpp  hook.hpp  inline_hook.hpp  log.hpp  self_unmap.S  solist.cpp  solist.hpp  yukilinker.cpp  yukilinker.hpp  yukizncore.cpp
userspace/zygisk/daemon/: CMakeLists.txt  native_modules.hpp  root_policy.cpp  root_policy.hpp  zygiskd.cpp  zygiskd.hpp
userspace/zygisk/daemon/tests/: root_policy_parser_test.cpp
userspace/zygisk/include/: zygisk.hpp
webui/: api.js  i18n.js  index.js
